# devstream

./: docker-compose.yml
data-service/: Cargo.toml  build.rs
data-service/.devcontainer/: Dockerfile.dev  devcontainer.json
data-service/proto/: user.proto
data-service/src/: main.rs  user.rs
data-service/src/user/: repo.rs  service.rs
rest-api/: .gitignore  Makefile  entrypoint.sh  go.mod  go.sum
rest-api/.devcontainer/: Dockerfile.dev  devcontainer.json
rest-api/cmd/api/: main.go
rest-api/internal/config/: config.go  development.env
rest-api/internal/database/: database.base.go  database.pg.go
rest-api/internal/handler/: auth.handler.go  streamkey.handler.go
rest-api/internal/model/: streamkey.model.go  user.model.go
rest-api/internal/repository/: base.go  streamkey.pg.go  user.grpc.go  user.pg.go
rest-api/internal/router/: auth.router.go  streamkey.router.go
rest-api/internal/util/appauth/: appauth.go
rest-api/internal/util/appenv/: appenv.go  env.go
rest-api/internal/util/apperror/: apperror.go  error.go  error_map.go
rest-api/internal/util/apphttp/: request.go  response.go  validator.go
rest-api/internal/util/applogger/: logger.base.go  logger.console.go  logger.sentry.go
rest-api/internal/util/idgen/: idgen.base.go  idgen.snowflake.go
rest-api/migrations/: 000001_init.down.sql  000001_init.up.sql
rest-api/pkg/userpb/: user.pb.go  user_grpc.pb.go
rest-api/proto/: user.proto
