[package]
name = "data-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.12.1"
rand = "0.8.5"
sonyflake = "0.2.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-postgres = "0.7.10"
tonic = "0.10.0"

[build-dependencies]
tonic-build = "0.10.0"
